--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,31 +1,31 @@
 <section class="overflow-hidden">
   <div class="container px-5 py-10 mx-auto">
-    <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <div class="flex flex-col lg:w-1/2">
+    <div class="lg:w-4/5 mx-auto flex flex-wrap items-center justify-center">
+      <div class="flex flex-col lg:w-1/2 items-center justify-center">
         <% if @review.images.present? %>
-          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper2 lg:w-[350px] lg:h-[350px]">
+          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper2 w-[300px] sm:w-[350px] h-[300px] sm:h-[350px]">
             <div class="swiper-wrapper">
               <% @review.images.each do |image| %>
-                <%= image_tag image, class: "lg:w-[350px] w-full lg:h-[350px] h-64 object-cover object-center rounded swiper-slide" %>
+                <%= image_tag image, class: "w-[300px] sm:w-[350px] h-[300px] sm:h-[350px] object-cover object-center rounded swiper-slide mr-[30px]" %>
               <% end %>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
           </div>
-          <div thumbsSlider="" class="swiper mySwiper lg:w-[350px] mt-1">
+          <div thumbsSlider="" class="swiper mySwiper w-[300px] sm:w-[350px] mt-1">
             <div class="swiper-wrapper">
               <% @review.images.each do |image| %>
-                <%= image_tag image, class: "lg:w-[80px] w-full lg:h-[80px] h-64 object-fill object-center rounded swiper-slide" %>
+                <%= image_tag image, class: "w-[60px] sm:w-[80px] h-[60px] sm:h-[80px] object-fill object-center rounded swiper-slide" %>
               <% end %>
             </div>
           </div>
         <% else %>
           <div>
-            <%= image_tag "kkrn_icon_shashin_3.png", class: "lg:w-[350px] w-full lg:h-[350px] h-64 object-cover object-center rounded mx-auto" %>
+            <%= image_tag "kkrn_icon_shashin_3.png", class: "w-[300px] sm:w-[350px] h-[300px] sm:h-[350px] object-cover object-center rounded mx-auto" %>
           </div>
         <% end %>
         <div class="mt-5 mx-auto">
-          <%= link_to "https://twitter.com/share?url=#{post_review_url(@review)}&text=【#{@review.title}】%0a#{@review.product.brand.name}%20#{@review.product.name}レビューをシェア%0a%0a%23インク沼%20%23iroGraphica%0a", title: "Xでシェア", class: "btn btn-neutral gap-0 w-[350px]", target: :_blank, rel: "noopener noreferrer nofollow" do %>
+          <%= link_to "https://twitter.com/share?url=#{post_review_url(@review)}&text=【#{@review.title}】%0a#{@review.product.brand.name}%20#{@review.product.name}のレビューをシェア%0a%0a%23インク沼%20%23iroGraphica%0a", title: "Xでシェア", class: "btn btn-neutral gap-0 w-[300px] sm:w-[350px]", target: :_blank, rel: "noopener noreferrer nofollow" do %>
             <i class="fa-brands fa-x-twitter text-[24px]"></i></i><span class="text-[20px]">でシェア</span>
           <% end %>
         </div>
