--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,17 +1,17 @@
 <div class="container mx-auto px-5 py-5">
-  <div class="flex justify-center items-center h-[270px]">
-    <%= image_tag "irographica-biglogo.png", class: "h-[270px] w-[720px] object-cover flex-1" %>
+  <div class="flex flex-wrap justify-center items-center h-[270px]">
+    <%= image_tag "irographica-biglogo.png", class: "h-[270px] w-[370px] sm:w-[720px] object-contain sm:object-cover flex-1" %>
     <div class="text-center text-2xl flex-1 tracking-wider">
-      <p><%= simple_format(t('home.copywriting')) %></p>
+      <%= simple_format(t('home.copywriting')) %>
     </div>
   </div>
-  <div class="flex flex-wrap justify-center items-center gap-4 mt-2 mb-10">
+  <div class="flex flex-wrap justify-center items-center gap-4 pt-32 sm:pt-2 mb-10">
     <p><%= t('search.category') %></p>
     <% @category.each do |c| %>
       <%= link_to c.color, search_products_path(c: c.id), class: "link" %>
     <% end %>
   </div>
-  <h1 class="text-5xl font-bold text-center mb-10 tracking-wider"><%= t('home.see_review') %></h1>
+  <h1 class="text-[32px] sm:text-5xl font-bold text-center mb-10 tracking-wider"><%= t('home.see_review') %></h1>
   <div class="flex flex-wrap justify-center items-center p-5 gap-5">
     <% if @reviews.present? %>
       <%= render partial: 'reviews/review', collection: @reviews %>
