--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -10,10 +10,8 @@
     <% else %>
       <%= image_tag 'kkrn_icon_user_1.png', class: "w-[150px] rounded-full mx-10 border-[2px] border-gray-200" %>
     <% end %>
-    <div class="mt-5 mx-auto items-center justify-center">
-      <%= link_to "https://twitter.com/share?url=#{post_profile_url(@user)}&text=#{@user.name}さんのプロフィール%0a%0a%23インク沼%20%23INKLOG", title: "Xでシェア", class: "btn btn-neutral gap-0 w-[110px]" do %>
-        <i class="fa-brands fa-x-twitter text-[16px]"></i></i><span class="text-[16px]">でシェア</span>
-      <% end %>
+    <div class="mt-5 mx-auto items-center justify-center hidden sm:block">
+      <%= render 'x_share' %>
     </div>
   </div>
   <div class="mx-10 flex flex-col">
@@ -38,6 +36,9 @@
           <i class="fa-brands fa-youtube text-[24px]"></i>
         <% end %>
       <% end %>
+    </div>
+    <div class="mt-5 mx-auto items-center justify-center sm:hidden">
+      <%= render 'x_share' %>
     </div>
   </div>
 </div>
