--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -1,6 +1,6 @@
 <div class="flash" data-controller="flash">
   <% flash.each do |message_type, message| %>
-    <div role="alert" class="alert alert-<%= flash_type(message_type) %> w-1/2 mx-auto mt-2">
+    <div role="alert" class="alert alert-<%= flash_type(message_type) %> w-64 sm:w-1/2 mx-auto mt-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="h-6 w-6 shrink-0 stroke-current"
