--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <section class="overflow-hidden">
   <div class="container px-5 py-24 mx-auto">
-    <div class="flex w-1/2 justify-center mx-auto mb-20 rounded-lg border border-gray-400 p-8 gap-10">
+    <div class="flex flex-wrap w-full sm:w-1/2 justify-center mx-auto mb-20 rounded-lg border border-gray-400 p-8 gap-10">
       <div class="flex flex-col gap-2">
         <h1 class="text-3xl font-bold"><%= @product.name %></h1>
         <p><%= @product.brand.name %></p>
