--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="flex flex-wrap -mx-3 mb-4">
     <div class="w-full px-3">
       <%= f.label :name, class: "px-3" %>
-      <%= f.text_field :name, class: "input input-bordered form-control w-full mx-auto pl-2 text-base" %>
+      <%= f.text_field :name, class: "input input-bordered form-control w-full mx-auto pl-2 text-base", autofocus: true %>
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-4">
