--- a/app/views/products/autocomplete.html.erb
+++ b/app/views/products/autocomplete.html.erb
@@ -1,6 +1,6 @@
 <% if @products.present? %>
   <% @products.each do |product| %>
-    <li class="flex items-center gap-x-3.5 py-2 px-3 w-50 sm:w-60 rounded-md text-sm text-gray-800 hover:bg-blue-200 focus:ring-2 focus:ring-blue-500 dark:text-gray-400 dark:hover:bg-blue-200 dark:hover:text-gray-300"
+    <li class="flex items-center gap-x-3.5 py-2 px-3 w-50 sm:w-60 rounded-md text-sm hover:bg-blue-200 focus:ring-2 focus:ring-blue-500"
       role="option"
       data-autocomplete-value="<%= product.id %>">
       <%= product.name %>
@@ -9,7 +9,7 @@
 <% end %>
 <% if @brands.present? %>
   <% @brands.each do |brand| %>
-    <li class="flex items-center gap-x-3.5 py-2 px-3 w-50 sm:w-60 rounded-md text-sm text-gray-800 hover:bg-blue-200 focus:ring-2 focus:ring-blue-500 dark:text-gray-400 dark:hover:bg-blue-200 dark:hover:text-gray-300"
+    <li class="flex items-center gap-x-3.5 py-2 px-3 w-50 sm:w-60 rounded-md text-sm hover:bg-blue-200 focus:ring-2 focus:ring-blue-500"
       role="option"
       data-autocomplete-value="<%= brand.id %>">
       <%= brand.name %>
