--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -34,7 +34,7 @@
     <div class="flex flex-wrap -mx-3 mb-4">
       <div class="w-full px-3">
         <%= f.label :product_name, class: "px-3" %>
-        <div data-controller="autocomplete" autocomplete-delay-value="100" data-autocomplete-min-length-value="3" data-autocomplete-url-value="<%= autocomplete_products_path %>" role="combobox">
+        <div data-controller="autocomplete" data-autocomplete-query-param-value="product_name" autocomplete-delay-value="100" data-autocomplete-min-length-value="3" data-autocomplete-url-value="<%= autocomplete_products_path %>" role="combobox">
           <%= f.text_field :product_name, value: @review.product&.name, class: "input input-bordered form-control mb-2 w-full mx-auto pl-2 text-base", data: { product_target: "name", autocomplete_target: "input" } %>
           <%= f.hidden_field :id, data: { autocomplete_target: 'hidden' } %>
           <ul class="list-group bg-base-100 absolute rounded-box z-[1] w-70 h-80 p-2 shadow overflow-y-auto overflow-x-hidden" data-autocomplete-target="results"></ul>
