--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -35,7 +35,7 @@
       <div class="w-full px-3">
         <%= f.label :product_name, class: "px-3" %>
         <div data-controller="autocomplete" data-autocomplete-query-param-value="product_name" autocomplete-delay-value="100" data-autocomplete-min-length-value="3" data-autocomplete-url-value="<%= autocomplete_products_path %>" role="combobox">
-          <%= f.text_field :product_name, value: @review.product&.name, class: "input input-bordered form-control mb-2 w-full mx-auto pl-2 text-base", data: { product_target: "name", autocomplete_target: "input" } %>
+          <%= f.text_field :product_name, value: @review.product&.name, class: "input input-bordered form-control mb-2 w-full mx-auto pl-2 text-base", data: { product_target: "name", autocomplete_target: "input", nested_form_target: "name", action: "change->nested-form#openRecipe" } %>
           <%= f.hidden_field :id, data: { autocomplete_target: 'hidden' } %>
           <ul class="list-group bg-base-100 absolute rounded-box z-[1] w-70 h-80 p-2 shadow overflow-y-auto overflow-x-hidden" data-autocomplete-target="results"></ul>
         </div>
@@ -43,7 +43,7 @@
       <div class="w-full px-3">
         <%= link_to t('reviews.form.select_product'), products_path, class: "btn btn-primary w-full mx-auto mb-2", data: { turbo_frame: "remote_modal" } %>
       </div>
-      <div class="w-full px-3">
+      <div class="w-full px-3 hidden" data-nested-form-target="recipe">
         <%= f.label "インクレシピ", class: "px-3" %>
         <template data-nested-form-target="template">
           <%= f.fields_for :ink_recipes, @review.ink_recipes, child_index: 'NEW_RECORD' do |ink_recipe_fields| %>
