--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -44,7 +44,7 @@
         <%= link_to t('reviews.form.select_product'), products_path, class: "btn btn-primary w-full mx-auto mb-2", data: { turbo_frame: "remote_modal" } %>
       </div>
       <div class="w-full px-3 hidden" data-nested-form-target="recipe">
-        <%= f.label "インクレシピ", class: "px-3" %>
+        <%= f.label :ink_recipes, class: "px-3" %>
         <template data-nested-form-target="template">
           <%= f.fields_for :ink_recipes, @review.ink_recipes, child_index: 'NEW_RECORD' do |ink_recipe_fields| %>
             <%= render "ink_recipes/recipe_form", f: ink_recipe_fields %>
@@ -55,7 +55,7 @@
           <%= render "ink_recipes/recipe_form", f: ink_recipe_fields %>
         <% end %>
         <div data-nested-form-target="target"></div>
-        <%= button_tag "インクレシピを追加する", data: { action: "nested-form#add" }, type: "button", class: "btn btn-primary w-full mx-auto" %>
+        <%= button_tag t('reviews.form.add_ink_recipe'), data: { action: "nested-form#add" }, type: "button", class: "btn btn-primary w-full mx-auto" %>
       </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-4">
