add: フォローフォロワー数表示用のパーシャルを作成してプロフィールヘッダーに設置 #112

--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -19,6 +19,7 @@
     <!-- フォローフォロワー機能実装誤に使用
     <div>0フォロー　0フォロワー</div>
     -->
+    <%= render 'stats' %>
     <p class="whitespace-pre-wrap"><%= @user.body %></p>
     <div class="flex items-center gap-4 mt-6">
       <% if @user.x_account.present? %>
