add: フォローフォロワー数表示パーシャルを作成 #112

--- a/app/views/users/_stats.html.erb
+++ b/app/views/users/_stats.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center gap-4 my-2">
+<div class="flex justify-center items-center gap-4 my-2" id="follow-count-<%= @user.id %>">
   <%= link_to following_user_path(@user), data: { turbo_frame: "remote_modal" } do %>
     <%= @user.following.count %>フォロ－
   <% end %>
