--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
           </li>
           <details class="dropdown dropdown-end">
             <summary class="inline-flex items-center justify-center gap-2 mx-5 cursor-pointer">
-              <div class="avatar">
+              <div class="avatar <%= "online" if current_user.notifications.unread.present? %>">
                 <div class="w-12 rounded-full border-[2px] border-gray-200">
                   <% if current_user.avatar.attached? %>
                     <%= image_tag current_user.avatar %>
@@ -32,7 +32,16 @@
             </summary>
             <ul class="menu dropdown-content bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
               <li><%= link_to t('header.mypage'), user_path(current_user) %></li>
-              <li><%= link_to t('header.notification'), "#" %></li>
+              <li>
+                <%= link_to notifications_path, data: { turbo_frame: "remote_modal" } do %>
+                  <%= t('header.notification') %>
+                  <% if current_user.notifications.unread.present? %>
+                    <div class="badge badge-success gap-2">
+                      +<%= current_user.notifications.unread.count %>
+                    </div>
+                  <% end %>
+                <% end %>
+              </li>
               <li><%= link_to t('header.sign_out'), destroy_user_session_path, data: { turbo_method: :delete } %></li>
             </ul>
           </details>
@@ -47,3 +56,4 @@
     </div>
   </div>
 </div>
+<%= turbo_frame_tag "remote_modal" %>
