--- a/app/views/layouts/_mobile_header.html.erb
+++ b/app/views/layouts/_mobile_header.html.erb
@@ -25,7 +25,14 @@
                   <span><%= t('header.post') %></span>
                 <% end %>
                 <%= link_to t('header.mypage'), user_path(current_user), data: { action: "slideover#close" } %>
-                <%= link_to t('header.notification'), "#", data: { action: "slideover#close" } %>
+                <%= link_to notifications_path, data: { action: "slideover#close", turbo_frame: "remote_modal" } do %>
+                  <%= t('header.notification') %>
+                  <% if current_user.notifications.unread.present? %>
+                    <div class="badge badge-success gap-2">
+                      +<%= current_user.notifications.unread.count %>
+                    </div>
+                  <% end %>
+                <% end %>
                 <%= link_to t('header.sign_out'), destroy_user_session_path, data: { turbo_method: :delete, action: "slideover#close" } %>
             <% else %>
                 <%= link_to t('header.sign_in'), user_session_path, class: "btn btn-wide btn-primary", data: { action: "slideover#close" } %>
@@ -58,6 +65,11 @@
               d="M4 6h16M4 12h16M4 18h7" />
           </svg>
         </button>
+        <% if user_signed_in? %>
+          <% if current_user.notifications.unread.present? %>
+            <div class="badge badge-success badge-xs absolute top-4 left-9"></div>
+          <% end %>
+        <% end %>
       </div>
     </div>
     <div class="navbar-center">
@@ -91,3 +103,4 @@
     </div>
   </div>
 </div>
+<%= turbo_frame_tag "remote_modal" %>
