--- a/app/views/notifications/_bookmark.html.erb
+++ b/app/views/notifications/_bookmark.html.erb
@@ -1,14 +1,16 @@
 <div class="flex flex-wrap justify-start items-center border-b-2 border-gray-100 sm:py-2 my-2 w-full sm:w-[500px]">
-  <%= link_to  user_path(notification.notifable.user), class: "flex items-center", id: notification.id, data: { turbo_frame: "_top", action: "remote-modal#close" } do %>
-    <% if notification.notifable.user.avatar.attached? %>
-      <%= image_tag notification.notifable.user.avatar, class: "object-cover w-[44px] rounded-full mx-2 border-[2px] border-gray-200" %>
-    <% else %>
-      <%= image_tag 'kkrn_icon_user_1.png', class: "w-[44px] rounded-full mx-2 border-[2px] border-gray-200" %>
+  <div class="flex flex-col sm:flex-row sm:justify-start sm:items-center">
+    <%= link_to  user_path(notification.notifable.user), class: "flex items-center", id: notification.id, data: { turbo_frame: "_top", action: "remote-modal#close" } do %>
+      <% if notification.notifable.user.avatar.attached? %>
+        <%= image_tag notification.notifable.user.avatar, class: "object-cover w-[44px] rounded-full mx-2 border-[2px] border-gray-200" %>
+      <% else %>
+        <%= image_tag 'kkrn_icon_user_1.png', class: "w-[44px] rounded-full mx-2 border-[2px] border-gray-200" %>
+      <% end %>
     <% end %>
-  <% end %>
-  <div>
-    <%= notification.notifable.user.name %>が
-    <%= link_to notification.notifable.review.title, review_path(notification.notifable.review), class: "link text-[#3F51B5]", data: { turbo_frame: "_top", action: "remote-modal#close" } %>
-    をブックマークしました。
+    <div>
+      <%= notification.notifable.user.name %>が
+      <%= link_to notification.notifable.review.title, review_path(notification.notifable.review), class: "link text-[#3F51B5]", data: { turbo_frame: "_top", action: "remote-modal#close" } %>
+      をブックマークしました。
+    </div>
   </div>
 </div>
