add: ページネーションリンク設置 #41

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,5 +11,6 @@
         <p><%= t('product.index.without_product') %></p>
       <% end %>
     </div>
+    <%= render "shared/load_more_button" %>
   </div>
 <% end %>
