--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -7,4 +7,5 @@
       <div><%= t('reviews.index.without_review') %></div>
     <% end %>
   </div>
+  <%= render "shared/load_more_button" %>
 </div>
