--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -19,4 +19,5 @@
       <div class="tracking-wider"><%= t('reviews.index.without_review') %></div>
     <% end %>
   </div>
+  <%= render "shared/load_more_button" %>
 </div>
